# ai-orchestration

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  agno_client.py  config.py  main.py  pyproject.toml  pyproject.toml.backup  pytest.ini
.github/workflows/: ci.yml
cui/: __init__.py  novel_writer.py
docs/: ARCHITECTURE.md
llm/: __init__.py  llm_manager.py
orchestration/: agno_client.py  ai_types.py  commands.py  config.py  exceptions.py  factory.py  main.py  types.py
orchestration/cli/: evaluator_cli.py
orchestration/components/: __init__.py  base.py  director.py  evaluator.py  interfaces.py  planner.py  reviewer.py  worker.py
orchestration/core/: message.py  session.py
orchestration/cui/: __init__.py  novel_writer.py  run_novel_writer.py
orchestration/llm/: __init__.py  llm_manager.py
orchestration/models/: __init__.py  message.py
orchestration/modes/: base.py  creative.py
orchestration/processes/: decomposition.py  execution.py  integration.py
orchestration/prompts/director/: analysis_integration.txt  coding_integration.txt  creative_integration.txt  generic_integration.txt
orchestration/prompts/planner/: analysis_planning.txt  coding_planning.txt  creative_planning.txt  generic_planning.txt  plan_validation.txt
orchestration/prompts/reviewer/: creative_evaluation.prompt  creative_review.prompt  evaluate.prompt  plan.prompt  result.prompt
orchestration/prompts/worker/: analysis_execution.txt  coding_execution.txt  creative_execution.txt  generic_execution.txt  requirements_validation.txt
orchestration/schemas/: __init__.py  base.py
orchestration/templates/reviewer/: creative_review.prompt  technical_review.prompt
orchestration/utils/: common.py  debugger.py
reviewer/: improvement_suggestions.prompt
schemas/: __init__.py
templates/reviewer/: creative_evaluation.prompt  improvement_suggestion.prompt
tests/: __init__.py  conftest.py  run_all_tests.py  test_ai_components.py  test_cui_creative_mode.py  test_director_ai.py  test_evaluator.py  test_integration.py  test_novel_writer.py  test_performance.py  test_planner.py  test_planner_ai.py  test_reviewer.py  test_reviewer_ai.py  test_worker.py  test_worker_ai.py  テスト方法.md
